GNOME Bugzilla – Bug 753098
Cannot compile 1.0.4
Last modified: 2015-08-04 14:05:30 UTC
Created attachment 308523 [details] Applet 1.0.4 compilation error make distclean ./autogen.sh ./configure --with-appindicator --enable-introspection=yes --prefix=/usr --sysconfdir=/etc --localstatedir=/var make ... CC libutils_libnm_la-utils.lo In file included from /usr/include/libnm/NetworkManager.h:86:0, from utils.h:32, from utils.c:30: /usr/include/libnm/nm-vpn-plugin-info.h:74:1: error: 'NMVpnPluginInfo' is deprecated (declared at /usr/include/libnm/nm-vpn-plugin-info.h:47): Not available before 1.2 [-Werror=deprecated-declarations] const char *nm_vpn_plugin_info_get_name (NMVpnPluginInfo *self); ^ /usr/include/libnm/nm-vpn-plugin-info.h:76:1: error: 'NMVpnPluginInfo' is deprecated (declared at /usr/include/libnm/nm-vpn-plugin-info.h:47): Not available before 1.2 [-Werror=deprecated-declarations] const char *nm_vpn_plugin_info_get_filename (NMVpnPluginInfo *self); ^ /usr/include/libnm/nm-vpn-plugin-info.h:78:1: error: 'NMVpnPluginInfo' is deprecated (declared at /usr/include/libnm/nm-vpn-plugin-info.h:47): Not available before 1.2 [-Werror=deprecated-declarations] const char *nm_vpn_plugin_info_get_service (NMVpnPluginInfo *self); ^ /usr/include/libnm/nm-vpn-plugin-info.h:80:1: error: 'NMVpnPluginInfo' is deprecated (declared at /usr/include/libnm/nm-vpn-plugin-info.h:47): Not available before 1.2 [-Werror=deprecated-declarations] const char *nm_vpn_plugin_info_get_plugin (NMVpnPluginInfo *self); ^ /usr/include/libnm/nm-vpn-plugin-info.h:82:1: error: 'NMVpnPluginInfo' is deprecated (declared at /usr/include/libnm/nm-vpn-plugin-info.h:47): Not available before 1.2 [-Werror=deprecated-declarations] const char *nm_vpn_plugin_info_get_program (NMVpnPluginInfo *self); ^ /usr/include/libnm/nm-vpn-plugin-info.h:84:1: error: 'NMVpnPluginInfo' is deprecated (declared at /usr/include/libnm/nm-vpn-plugin-info.h:47): Not available before 1.2 [-Werror=deprecated-declarations] const char *nm_vpn_plugin_info_lookup_property (NMVpnPluginInfo *self, const char *group, const char *key); ^ /usr/include/libnm/nm-vpn-plugin-info.h:92:1: error: 'NMVpnPluginInfo' is deprecated (declared at /usr/include/libnm/nm-vpn-plugin-info.h:47): Not available before 1.2 [-Werror=deprecated-declarations] gboolean nm_vpn_plugin_info_list_add (GSList **list, NMVpnPluginInfo *plugin_info, GError **error); ^ /usr/include/libnm/nm-vpn-plugin-info.h:94:1: error: 'NMVpnPluginInfo' is deprecated (declared at /usr/include/libnm/nm-vpn-plugin-info.h:47): Not available before 1.2 [-Werror=deprecated-declarations] gboolean nm_vpn_plugin_info_list_remove (GSList **list, NMVpnPluginInfo *plugin_info); ^ /usr/include/libnm/nm-vpn-plugin-info.h:104:1: error: 'NMVpnPluginInfo' is deprecated (declared at /usr/include/libnm/nm-vpn-plugin-info.h:47): Not available before 1.2 [-Werror=deprecated-declarations] NMVpnEditorPlugin *nm_vpn_plugin_info_get_editor_plugin (NMVpnPluginInfo *plugin_info); ^ /usr/include/libnm/nm-vpn-plugin-info.h:106:1: error: 'NMVpnPluginInfo' is deprecated (declared at /usr/include/libnm/nm-vpn-plugin-info.h:47): Not available before 1.2 [-Werror=deprecated-declarations] void nm_vpn_plugin_info_set_editor_plugin (NMVpnPluginInfo *self, ^ /usr/include/libnm/nm-vpn-plugin-info.h:109:1: error: 'NMVpnPluginInfo' is deprecated (declared at /usr/include/libnm/nm-vpn-plugin-info.h:47): Not available before 1.2 [-Werror=deprecated-declarations] NMVpnEditorPlugin *nm_vpn_plugin_info_load_editor_plugin (NMVpnPluginInfo *plugin_info, ^ cc1: all warnings being treated as errors Makefile:525: recipe for target 'libutils_libnm_la-utils.lo' failed make[5]: *** [libutils_libnm_la-utils.lo] Error 1 make[5]: Leaving directory '/home/actionmystique/Program-Files/Ubuntu/Network-Manager/git-network-manager-applet/src/utils' Makefile:544: recipe for target 'all-recursive' failed make[4]: *** [all-recursive] Error 1 make[4]: Leaving directory '/home/actionmystique/Program-Files/Ubuntu/Network-Manager/git-network-manager-applet/src/utils' Makefile:948: recipe for target 'all-recursive' failed make[3]: *** [all-recursive] Error 1 make[3]: Leaving directory '/home/actionmystique/Program-Files/Ubuntu/Network-Manager/git-network-manager-applet/src' Makefile:525: recipe for target 'all' failed make[2]: *** [all] Error 2 make[2]: Leaving directory '/home/actionmystique/Program-Files/Ubuntu/Network-Manager/git-network-manager-applet/src' Makefile:616: recipe for target 'all-recursive' failed make[1]: *** [all-recursive] Error 1 make[1]: Leaving directory '/home/actionmystique/Program-Files/Ubuntu/Network-Manager/git-network-manager-applet' Makefile:442: recipe for target 'all' failed make: *** [all] Error 2
I cannot reproduce this. What versions are you exactly using? Where did you get them? NMVpnPluginInfo is only in "libnm" on NetworkManager "master" branch (1.1). But nm-applet 1.0.4 compiles against "libnm-glib" (the legacy library). It does not even use "libnm".
Hm, seems to only include "NetworkManager.h" from libnm triggers the warning... (clearing NEEDINFO, working on a fix). But I still think, the problem should not happen if you compile 1.0.4, does it? Did you have the error while compiling nm-applet from master?
More details: sources from master git://git.gnome.org/network-manager-applet Compiled on Ubuntu Server 15.04 Gnome I also try to compile & install all other related sources from git master: network-manager 1.1.0-dev Openconnect OpenVPN PPTP VPNC
The compilation & installation pass now.
Thanks for checking. There was actually a bug on master, fixed by http://cgit.freedesktop.org/NetworkManager/NetworkManager/commit/?id=e0bded93f347154fdd5e2a5c2811ff49942f24d5